// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Entity: Unit Test should query: getCommitByDocumentId 1`] = `
Object {
  "getCommitsByDocumentId": Array [],
}
`;

exports[`Document Entity: Unit Test should query: getDocumentById 1`] = `
Object {
  "getDocumentById": Object {
    "documentId": "1542385173331",
    "link": "www.example.com",
    "loanId": "123456",
    "ownerId": "example@gmail.com",
    "reference": "REF0001",
    "status": "0",
    "timestamp": "1543041982770",
    "title": "Top 15+ UK Scholarships for International Students",
  },
}
`;

exports[`Loan Entity: Unit Test should query: getCommitsByLoanId 1`] = `
Object {
  "getCommitsByLoanId": Array [],
}
`;

exports[`Loan Entity: Unit Test should query: getLoanById 1`] = `
Object {
  "getLoanById": null,
}
`;

exports[`LoanDetails: Unit Test should query: getLoanDetailsById 1`] = `undefined`;

exports[`User Entity: Unit Test should query: getCommitsByUserId 1`] = `
Object {
  "getCommitsByUserId": Array [
    Object {
      "commitId": "20181114163145704:example@gmail.com",
      "committedAt": "1542213105704",
      "entityName": "typeDefs.onchain.ts.ts",
      "events": Array [
        Object {
          "type": "UserCreated",
        },
      ],
      "id": "example@gmail.com",
      "version": 0,
    },
  ],
}
`;

exports[`User Entity: Unit Test should query: getUserById 1`] = `null`;
